# The-Amoeba-World

./: .gitignore  .project  Amoeba.cabal  Amoeba.cabal.orig  Amoeba.cabal~  LICENSE  Paths_The_Amoeba_World.hs  README.md  README.md~  build-and-run-tests-verbose.sh  build-and-run-tests-verbose.sh~  build-and-run-tests.sh  build-and-run-tests.sh~  build-tests.sh  build-tests.sh~  build.sh  build.sh~  clean_bins.sh  commit.sh  copy-test-data.sh  copy-test-data.sh~  crun.sh  exec.sh  log.txt  m  meta-build.sh  moves.txt  rebuild.sh  rebuild.sh~  run-tests-verbose.sh  run-tests-verbose.sh~  run-tests.sh  run-tests.sh~  run-tests.sh~~  run.sh  run.sh~  sources.txt
Amoeba/: Amoeba.hs  Amoeba.hs.orig  Main.hs  World.World
Amoeba/Application/: Boot.hs  Config.hs  Constants.hs  Environment.hs  GameFlow.hs  MainLoop.hs  Wire.hs
Amoeba/Application/Assets/: ConfigScheme.hs  GameFlow1.hs  GameFlow2.hs  TestWorld.hs  Wires.hs
Amoeba/Application/Game/: Control.hs  Engine.hs  GameState.hs  Logic.hs  Runtime.hs  RuntimeSt.hs
Amoeba/Application/Game/Engine/: Core.hs  GameWire.hs  MainLoop.hs  Runtime.hs  Types.hs
Amoeba/Application/Runtime/: Engine.hs  Language.hs  Logic.hs
Amoeba/Application/Storage/: CellularNetLoader.hs  GameLoader.hs  Loader.hs  WorldLoader.hs
Amoeba/CellularNet/: Facade.hs  Geometry.hs  Loader.hs  Net.hs  RuntimeSt.hs  View.hs  Wire.hs
Amoeba/GameLogic/: AI.hs  Evaluation.hs  Facade.hs  Game.hs  GenericAI.hs  GenericWorld.hs  Geometry.hs  Object.hs  ObjectCell.hs  Objects.hs  Player.hs  Properties.hs  Scenario.hs  Scene.hs  Types.hs  World.hs
Amoeba/GameLogic/AI/: AI.hs  GenericAI.hs
Amoeba/GameLogic/Assets/: Objects.hs  Players.hs  Scenarios.hs
Amoeba/GameLogic/Base/: Geometry.hs
Amoeba/GameLogic/Data/: Facade.hs  Game.hs  Object.hs  Player.hs  Strategy.hs  Task.hs  Types.hs  World.hs
Amoeba/GameLogic/Interpreter/: Language.hs
Amoeba/GameLogic/Language/: Parser.hs  RawToken.hs  Scheme.hs  Translator.hs
Amoeba/GameLogic/Language/Parsers/: Common.hs  ItemParser.hs  RawParser.hs  RawToken.hs  WorldParser.hs
Amoeba/GameLogic/Language/Parsing/: Common.hs  ItemParser.hs  RawParser.hs  WorldParser.hs
Amoeba/GameLogic/Language/Translating/: Actions.hs  Rules.hs  Runtime.hs  Scheme.hs  Translator.hs  Triggers.hs
Amoeba/GameLogic/Language/Translation/: Actions.hs  Rules.hs  Runtime.hs  Translator.hs  Triggers.hs
Amoeba/GameLogic/Runtime/: Evaluation.hs  World.hs
Amoeba/GameLogic/Scenario/: Evaluation.hs
Amoeba/GameLogic/World/: GenericWorld.hs  Geometry.hs  Objects.hs  Player.hs  Properties.hs  Scenario.hs  Types.hs  World.hs
Amoeba/GameView/: Color.hs  Items.hs  Render.hs  Scene.hs  SceneGraph.hs  View.hs
Amoeba/Middleware/: Wire.hs
Amoeba/Middleware/Config/: Config.hs  Extra.hs  Facade.hs  Language.hs  Scheme.hs
Amoeba/Middleware/FRP/: NetwireFacade.hs
Amoeba/Middleware/Math/: Geometry.hs
Amoeba/Middleware/Parsing/: Common.hs  Facade.hs  ParsecFacade.hs
Amoeba/Middleware/Raws/: Parser.hs  Structure.hs
Amoeba/Middleware/SDL/: Environment.hs  Render.hs  SDLFacade.hs
Amoeba/Middleware/Tracing/: ErrorHandling.hs  Log.hs
Amoeba/Misc/: AccessorMonoid.hs  Descripted.hs  Descriptions.hs  Id.hs  Utils.hs
Amoeba/Test/: Arbitraries.hs  Data.hs  Dummy.hs  EitherMonadCallTest.hs  EvaluationTest.hs  GeometryTest.hs  LensTest.hs  ObjectTest.hs  ObjectsTest.hs  ParserTest.hs  ParsingTest.hs  PatternGuardTest.hs  Properties.hs  PropertiesTest.hs  ScenarioTest.hs  SceneGraph.hs  SceneGraphTest.hs  StateInjectionTest.hs  StateInjectionTest2.hs  Test.hs  TranslatingTest.hs  TranslationTest.hs  TypeFamilyTest2.hs  TypeFamilyTest3.hs  WireTest.hs  WireTest1.hs  WireTest2.hs  WireTest3.hs  WorldOld.hs  WorldTest.hs
Amoeba/Test/Data/: Options.cfg
Amoeba/Test/Data/Raws/: Item.arf  Items.its  ResearchTranslationBug_World.arf  World1.arf  World2.adt  World3.adt  World3.arf  World3.tok  World4_duplicate.arf
Amoeba/Test/Utils/: Arbitraries.hs  Data.hs  Dummy.hs  EvaluationUtils.hs  GameArbitraries.hs  GeometryArbitraries.hs  GeometryData.hs  ObjectArbitraries.hs  TestGameData.hs  WorldArfData.hs
Amoeba/Testing/: ActiveItem.hi  ActiveItem.hs  BattleField.hi  BattleField.hs  Factory.hi  Factory.hs  FieldItem.hi  FieldItem.hs  Fort.hi  Fort.hs
Amoeba/View/: Color.hs  Config.hs  Language.hs  NetView.hs  Runtime.hs  SdlFacade.hs  View.hs
Amoeba/World/: Constants.hs  Descripted.hs  GameMapUpdater.hs  GenericWorld.hs  Geometry.hs  Geometry.hs.orig  Id.hs  Karyon.hs  Objects.hs  Player.hs  Player.hs.orig  Properties.hs  Stochastic.hs  Test.hs  Types.hs  Utils.hs  World.hs  World.hs.orig  WorldMap.hs  WorldMapUpdater.hs  WorldOld.hs
Amoeba/World/Items/: Border.hs  Canyon.hs  Canyon.hs.orig  Karyon.hs  Karyon.hs.orig  KaryonTest.hs  Plasma.hs  Plasma.hs.orig  Stone.hs  Stone.hs.orig
Assets/Raws/: Items.txt
Game/: .gitignore  Amoeba
Game/Data/: Options.cfg  Options.cfg~
Game/Data/Db/: World.dat~
Game/Data/Raws/: Items.arf  Items.its~  World.arf
Temp/: Amoeba
scripts/: build-tests.sh  build-tests.sh~  build.sh  clean-test-data.sh  clean-test-data.sh~  copy-test-data.sh  copy-test-data.sh~  copy.sh  rebuild.sh
src/: Main.hs
src/Amoeba/AI/: Facade.hs
src/Amoeba/Application/: Boot.hs  Config.hs
src/Amoeba/Application/Assets/: AIPlayerFlow.hs  ConfigScheme.hs  GSStorageFlow.hs  GameFlow1.hs  GameFlow2.hs  GameStorageFlow.hs  TestWorld.hs  ViewConfig.hs  ViewFlow.hs  Wires.hs
src/Amoeba/Application/Game/: GameDataLoader.hs  GameState.hs  Logic.hs  RuntimeSt.hs
src/Amoeba/Application/Storage/: GameLoader.hs
src/Amoeba/GameLogic/: Facade.hs  GameLogicAccessor.hs  Runtime.hs
src/Amoeba/GameLogic/Assets/: Objects.hs  Scenarios.hs
src/Amoeba/GameLogic/Data/: Facade.hs  Game.hs  Object.hs  Player.hs  Strategy.hs  World.hs
src/Amoeba/GameLogic/Interpreter/: Language.hs
src/Amoeba/GameLogic/Language/: RawToken.hs  Scheme.hs
src/Amoeba/GameLogic/Scenario/: Evaluation.hs
src/Amoeba/GameStorage/: Facade.hs  GameStorage.hs
src/Amoeba/Test/: GeometryTest.hs
src/Amoeba/View/: Facade.hs  Language.hs  View.hs  ViewAccessor.hs
(+38 files in other folders)
