name:           The-Amoeba-World
version:        0.1
cabal-version:  >= 1.10
build-type:     Simple
author:         Alexander Granin
synopsis:       The Amoeba World Conquest Game
description:    The Amoeba World Conquest Game
license:        GPL-3
category:       Game
maintainer:     Alexander Granin <graninas@gmail.com>
stability:      experimental
data-files:     
                Game/Data/Raws/Items.arf, 
                Game/Data/Raws/World.arf, 
                Game/Data/Options.cfg, 
                Game/Logs/Amoeba.log
license-file:   LICENSE

executable Amoeba
  build-depends:   
                   base >= 4 && <5,
                   transformers,
                   containers,
                   hslogger >=1.2.3 && <1.2.4,
                   SDL-gfx >=0.6.0,
                   SDL >=0.6.5,
                   netwire >=5.0.0 && <5.1,
                   lens >=4.0.7 && <4.1,
                   linear >=1.9.1 && <1.10,
                   random >=1.0.1,
                   mtl >=2.1.2,
                   MissingH >=1.2.1 && <1.3,
                   ConfigFile >=1.1.1 && <1.2,
                   SDL-ttf >=0.6.2 && <0.7,
                   either >=4.1.1 && <4.2,
                   parsec >=3.1.5,
                   directory,
                   filepath,
                   The-Amoeba-World-GameLogic >=0.1.1,
                   The-Amoeba-World-Middleware >=0.1,
                   The-Amoeba-World-View >=0.1
  default-language: Haskell2010
  hs-source-dirs:  ./src
  ghc-options:     -threaded -outputdir ./.bin
  main-is:         Main.hs

