name:           The-Amoeba-World
version:        0.2.0.2
cabal-version:  >= 1.10
build-type:     Simple
author:         Alexander Granin
synopsis:       The Amoeba World Conquest Game
description:    The Amoeba World Conquest Game
license:        GPL-3
category:       Game
maintainer:     Alexander Granin <graninas@gmail.com>
stability:      experimental
data-files:     
                Game/Data/Raws/Items.arf, 
                Game/Data/Raws/World.arf, 
                Game/Data/Options.cfg, 
                Game/Logs/Amoeba.log
license-file:   LICENSE

executable Amoeba
  default-language: Haskell2010
  build-depends:   
                   base >= 4 && <5,
                   transformers,
                   containers,
                   hslogger >=1.2.3,
                   netwire >=5.0.0,
                   lens >=4.0.7,
                   linear >=1.9.1,
                   random >=1.0.1,
                   mtl >=2.1.2,
                   MissingH >=1.2.1,
                   ConfigFile >=1.1.1,
                   either >=4.1.1,
                   parsec >=3.1.5,
                   directory,
                   filepath,
                   stm >=2.4,
                   The-Amoeba-World-GameLogic >=0.2.0.2,
                   The-Amoeba-World-Middleware >=0.2.0.2,
                   The-Amoeba-World-View >=0.2.0.2
  hs-source-dirs:  ./src
  ghc-options:     -threaded -outputdir ./.bin -Wall -W
  main-is:         Main.hs

