name:           The-Amoeba-World
version:        0.2.0.2
cabal-version:  >= 1.10
build-type:     Simple
author:         Alexander Granin
synopsis:       The Amoeba World Conquest Game
description:    The Amoeba World Conquest Game
license:        GPL-3
category:       Game
maintainer:     Alexander Granin <graninas@gmail.com>
stability:      experimental
data-files:     
                Game/Data/Raws/Items.arf, 
                Game/Data/Raws/World.arf, 
                Game/Data/Options.cfg, 
                Game/Logs/Amoeba.log
license-file:   LICENSE

executable Amoeba
  default-language: Haskell2010
  build-depends:   
                   base >= 4 && <5,
                   transformers,
                   containers,
                   hslogger >=1.2.3,
                   netwire >=5.0.0,
                   lens >=4.0.7,
                   linear >=1.9.1,
                   random >=1.0.1,
                   mtl >=2.1.2,
                   MissingH >=1.2.1,
                   ConfigFile >=1.1.1,
                   either >=4.1.1,
                   parsec >=3.1.5,
                   directory,
                   filepath,
                   stm >=2.4,
                   GLFW-b >=1.4.6,
                   OpenGL >=2.9.2,
                   OpenGLRaw >=1.5.0
  ghc-options:     -threaded -outputdir ./.bin -Wall -W
  main-is:         Main.hs
  hs-source-dirs:   
                    src
  other-modules:    
                    Paths_The_Amoeba_World,
                    Amoeba.AI.Facade,
                    Amoeba.Application.Assets.AIPlayerFlow,
                    Amoeba.Application.Assets.ConfigScheme,
                    Amoeba.Application.Assets.GameStorageFlow,
                    Amoeba.Application.Assets.TestWorld,
                    Amoeba.Application.Assets.ViewConfig,
                    Amoeba.Application.Assets.ViewFlow,
                    Amoeba.Application.Boot,
                    Amoeba.Application.Game.Engine.Core,
                    Amoeba.Application.Game.Engine.GameWire,
                    Amoeba.Application.Game.Engine.Runtime,
                    Amoeba.Application.Game.GameDataLoader,
                    Amoeba.GameLogic.Assets.Objects,
                    Amoeba.GameLogic.Assets.Scenarios,
                    Amoeba.GameLogic.Data.Facade,
                    Amoeba.GameLogic.Data.Game,
                    Amoeba.GameLogic.Data.Object,
                    Amoeba.GameLogic.Data.Player,
                    Amoeba.GameLogic.Data.Strategy,
                    Amoeba.GameLogic.Data.World,
                    Amoeba.GameLogic.Facade,
                    Amoeba.GameLogic.GameLogicAccessor,
                    Amoeba.GameLogic.Interpreter.Language,
                    Amoeba.GameLogic.Language.Parsing.Common,
                    Amoeba.GameLogic.Language.Parsing.ItemParser,
                    Amoeba.GameLogic.Language.Parsing.RawParser,
                    Amoeba.GameLogic.Language.Parsing.WorldParser,
                    Amoeba.GameLogic.Language.RawToken,
                    Amoeba.GameLogic.Language.Scheme,
                    Amoeba.GameLogic.Language.Translation.Actions,
                    Amoeba.GameLogic.Language.Translation.Rules,
                    Amoeba.GameLogic.Language.Translation.Runtime,
                    Amoeba.GameLogic.Language.Translation.Translator,
                    Amoeba.GameLogic.Language.Translation.Triggers,
                    Amoeba.GameLogic.Runtime,
                    Amoeba.GameLogic.Scenario.Evaluation,
                    Amoeba.GameStorage.Facade,
                    Amoeba.GameStorage.GameStorage,
                    Amoeba.Middleware.Config.Config,
                    Amoeba.Middleware.Config.Extra,
                    Amoeba.Middleware.Config.Facade,
                    Amoeba.Middleware.FRP.NetwireFacade,
                    Amoeba.Middleware.GLFW.Facade,
                    Amoeba.Middleware.Math.Geometry,
                    Amoeba.Middleware.OpenGL.Facade,
                    Amoeba.Middleware.Parsing.Common,
                    Amoeba.Middleware.Parsing.Facade,
                    Amoeba.Middleware.Parsing.ParsecFacade,
                    Amoeba.Middleware.Tracing.ErrorHandling,
                    Amoeba.Middleware.Tracing.Log,
                    Amoeba.View.Facade,
                    Amoeba.View.Input.InputAccessor,
                    Amoeba.View.Language,
                    Amoeba.View.Output.OutputAccessor,
                    Amoeba.View.Output.Render,
                    Amoeba.View.Output.Runtime,
                    Amoeba.View.Output.Types,
                    Amoeba.View.Output.Utils,
                    Amoeba.View.View,
                    Amoeba.View.ViewAccessor,
                    Amoeba.Middleware.FRP.Debug,
                    Amoeba.Middleware.OpenGL.Color,
                    Amoeba.Middleware.OpenGL.Common
